--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Import materialize.css -->
+    <link rel="stylesheet" href="app/css/reset.css">
+
+    <!-- Import materialize.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
     <!-- Animate CSS> -->
@@ -24,6 +27,8 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="app/css/styles.css">
 
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="app/css/mozila.css">
     <title>Koomkin</title>
 </head>
 
