--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Favicon -->
     <link rel="icon" href="app/assets/img/Fav.ico" />
 
+    <!-- Raleway -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -28,6 +31,9 @@
     <link rel="stylesheet" href="app/css/styles.css">
 
     <!-- Stylesheet -->
+    <link rel="stylesheet" href="app/css/media.css">
+
+    <!-- Mozila -->
     <link rel="stylesheet" href="app/css/mozila.css">
     <title>Koomkin</title>
 </head>
