--- a/index.html
+++ b/index.html
@@ -43,18 +43,16 @@
     <home></home>
 
     <!-- Materialize.js-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="https://unpkg.com/jquery-aniview/dist/jquery.aniview.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.js"></script>
     <script src="app/assets/script/jquery.counterup.js"></script>
 
     <!-- AngularJS -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/components/homepage-component/homepage.component.js"></script>
-
-    <!-- Counter -->
 
 </body>
 
