--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Mozila -->
     <link rel="stylesheet" href="app/css/mozila.css">
-    <title>Koomkin</title>
+    <title>Publicidad en Internet</title>
 </head>
 
 <body>
