--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
     <!-- Mozila -->
     <link rel="stylesheet" href="app/css/mozila.css">
+
+    <!-- Edge -->
+    <link rel="stylesheet" href="app/css/edge.css">
     <title>Publicidad en Internet</title>
 </head>
 
