--- a/index.html
+++ b/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html lang="es" ng-app="koomkin">
+<html lang="es" ng-app="koomkin" prefix="og: http://ogp.me/ns#">
 
 <head>
+
+    <title>Publicidad en Internet</title>
+
+    <!-- facebook and other social sites -->
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="Koomkin">
+    <meta property="og:title" content="Publicidad en Internet">
+    <meta property="og:description" content="¿Cuántos clientes nuevos quieres hoy? Te presentamos el canal de Ventas Nº1 para empresas en México.">
+    <meta property="og:image" content="https://drive.google.com/uc?id=1PUXpCU37hmgNSX6IhbY9rz2naEJz_rHx">
+    <meta property="og:url" content="https://www.koomkin.com.mx/">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@koomkin">
+    <meta name="twitter:creator" content="@koomkin">
+    <meta name="twitter:title" content="Publicidad en Internet">
+    <meta name="twitter:description" content="¿Cuántos clientes nuevos quieres hoy? Te presentamos el canal de Ventas Nº1 para empresas en México.">
+    <meta name="twitter:image" content="https://drive.google.com/uc?id=1PUXpCU37hmgNSX6IhbY9rz2naEJz_rHx">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta https-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Favicon -->
     <link rel="icon" href="app/assets/img/Fav.ico" />
 
     <!-- Raleway -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Import materialize.css -->
     <link rel="stylesheet" href="app/css/reset.css">
 
     <!-- Import materialize.css -->
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
     <!-- Animate CSS> -->
     <link rel="stylesheet" href="app/css/animate.css">
 
     <!-- Social Media Icons -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="app/css/styles.css">
@@ -38,18 +57,63 @@
 
     <!-- Edge -->
     <link rel="stylesheet" href="app/css/edge.css">
-    <title>Publicidad en Internet</title>
+
 </head>
+
+<!-- Facebook Pixel Code -->
+<script>
+    ! function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+            n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = '2.0';
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '131456684339093');
+    fbq('track', 'PageView');
+</script>
+<noscript>
+    <img height="1" width="1" src="https://www.facebook.com/tr?id=131456684339093&ev=PageView
+    &noscript=1" />
+</noscript>
+<!-- End Facebook Pixel Code -->
+
+<!-- Start of LiveChat (www.livechatinc.com) code -->
+<script type="text/javascript">
+    window.__lc = window.__lc || {};
+    window.__lc.license = 7343101;
+    (function () {
+        var lc = document.createElement('script');
+        lc.type = 'text/javascript';
+        lc.async = true;
+        lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') +
+            'cdn.livechatinc.com/tracking.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(lc, s);
+    })();
+</script>
+<!-- End of LiveChat code -->
 
 <body>
 
     <home></home>
 
     <!-- Materialize.js-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="http://unpkg.com/jquery-aniview/dist/jquery.aniview.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://unpkg.com/jquery-aniview/dist/jquery.aniview.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.js"></script>
     <script src="app/assets/script/jquery.counterup.js"></script>
 
     <!-- AngularJS -->
