--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Publicidad en Internet</title>
 
     <!-- facebook and other social sites -->
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="marketing">
     <meta property="og:site_name" content="Koomkin">
     <meta property="og:title" content="Publicidad en Internet">
     <meta property="og:description" content="¿Cuántos clientes nuevos quieres hoy? Te presentamos el canal de Ventas Nº1 para empresas en México.">
     <meta property="og:image" content="https://drive.google.com/uc?id=1PUXpCU37hmgNSX6IhbY9rz2naEJz_rHx">
     <meta property="og:url" content="https://www.koomkin.com.mx/">
+    <meta property="fb:app_id" content="338087929567793">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -20,6 +21,7 @@
     <meta name="twitter:title" content="Publicidad en Internet">
     <meta name="twitter:description" content="¿Cuántos clientes nuevos quieres hoy? Te presentamos el canal de Ventas Nº1 para empresas en México.">
     <meta name="twitter:image" content="https://drive.google.com/uc?id=1PUXpCU37hmgNSX6IhbY9rz2naEJz_rHx">
+     
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
