--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 
     <title>Publicidad en Internet</title>
 
-    <!-- facebook and other social sites -->
-    <meta property="og:type" content="marketing">
+    <!-- facebook card and other social sites -->
+    <meta property="og:type" content="website">
     <meta property="og:site_name" content="Koomkin">
     <meta property="og:title" content="Publicidad en Internet">
-    <meta property="og:description" content="¿Cuántos clientes nuevos quieres hoy? Te presentamos el canal de Ventas Nº1 para empresas en México.">
-    <meta property="og:image" content="https://drive.google.com/uc?id=1PUXpCU37hmgNSX6IhbY9rz2naEJz_rHx">
+    <meta property="og:description" content="¿Tienes un Negocio? ¡Anúnciate en Internet y Obtén Mas Clientes! Nosotros te Ayudamos a Aumentar tus Ventas 😉">
+    <meta property="og:image" content="https://drive.google.com/uc?id=1IsJTXEU5XLece1y_4f8MmrDjuiUkb5Pw">
     <meta property="og:url" content="https://www.koomkin.com.mx/">
     <meta property="fb:app_id" content="338087929567793">
 
-    <!-- Twitter -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@koomkin">
     <meta name="twitter:creator" content="@koomkin">
     <meta name="twitter:title" content="Publicidad en Internet">
-    <meta name="twitter:description" content="¿Cuántos clientes nuevos quieres hoy? Te presentamos el canal de Ventas Nº1 para empresas en México.">
-    <meta name="twitter:image" content="https://drive.google.com/uc?id=1PUXpCU37hmgNSX6IhbY9rz2naEJz_rHx">
-     
+    <meta name="twitter:description" content="¿Tienes un Negocio? ¡Anúnciate en Internet y Obtén Mas Clientes! Nosotros te Ayudamos a Aumentar tus Ventas 😉">
+    <meta name="twitter:image" content="https://drive.google.com/uc?id=1IsJTXEU5XLece1y_4f8MmrDjuiUkb5Pw">
+
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,7 +62,30 @@
 
 </head>
 
+<!-- Twitter universal website tag code -->
+
+<script>
+    ! function (e, t, n, s, u, a) {
+        e.twq || (s = e.twq = function () {
+                s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
+
+            }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src =
+            '//static.ads-twitter.com/uwt.js',
+
+            a = t.getElementsByTagName(n)[0], a.parentNode.insertBefore(u, a))
+    }(window, document, 'script');
+
+    // Insert Twitter Pixel ID and Standard Event data below
+
+    twq('init', 'nz0wb');
+
+    twq('track', 'PageView');
+</script>
+
+<!-- End Twitter universal website tag code -->
+
 <!-- Facebook Pixel Code -->
+
 <script>
     ! function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
@@ -89,9 +112,11 @@
     <img height="1" width="1" src="https://www.facebook.com/tr?id=131456684339093&ev=PageView
     &noscript=1" />
 </noscript>
+
 <!-- End Facebook Pixel Code -->
 
 <!-- Start of LiveChat (www.livechatinc.com) code -->
+
 <script type="text/javascript">
     window.__lc = window.__lc || {};
     window.__lc.license = 7343101;
@@ -105,6 +130,7 @@
         s.parentNode.insertBefore(lc, s);
     })();
 </script>
+
 <!-- End of LiveChat code -->
 
 <body>
